@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.swagger.parser.v3</groupId>
     <artifactId>swagger-parser-project</artifactId>
-    <version>2.0.31-SNAPSHOT</version>
+    <version>2.1.20-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>swagger-parser-project</name>
     <developers>
@@ -59,15 +59,35 @@
                     <exclude>logback.xml</exclude>
                 </excludes>
             </resource>
+            <resource>
+                <targetPath>META-INF</targetPath>
+                <directory>.</directory>
+                <includes>
+                    <include>NOTICE</include>
+                    <include>LICENSE</include>
+                </includes>
+            </resource>
         </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire-version}</version>
+                <dependencies>
+                    <!--dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-junit4</artifactId>
+                        <version>3.0.0</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-testng</artifactId>
+                        <version>3.1.2</version>
+                    </dependency-->
+                </dependencies>
                 <configuration>
                     <testNGArtifactName>none:none</testNGArtifactName>
-                    <argLine>-Djdk.attach.allowAttachSelf</argLine>
+                    <argLine>-javaagent:"${settings.localRepository}"/org/jmockit/jmockit/${jmockit-version}/jmockit-${jmockit-version}.jar --add-opens java.base/java.lang=ALL-UNNAMED -Djdk.attach.allowAttachSelf</argLine>
                 </configuration>
                 <executions>
                     <execution>
@@ -100,7 +120,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>2.4</version>
+                <version>3.3.0</version>
                 <configuration>
                     <excludes>
                         <exclude>**/logback.xml</exclude>
@@ -117,16 +137,12 @@
             </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
+                <version>3.11.0</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.1.1</version>
+                <version>3.6.2</version>
                 <configuration>
                     <aggregate>true</aggregate>
                     <source>1.8</source>
@@ -149,7 +165,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>3.1.0</version>
+                <version>3.3.0</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -163,7 +179,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.1</version>
+                <version>0.8.8</version>
                 <executions>
                     <execution>
                         <id>default-prepare-agent</id>
@@ -196,7 +212,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-                <version>3.0.0-M2</version>
+                <version>3.4.1</version>
                 <executions>
                     <execution>
                         <id>enforce-no-snapshots</id>
@@ -218,7 +234,7 @@
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.8</version>
+                <version>1.6.13</version>
                 <extensions>true</extensions>
                 <configuration>
                     <serverId>ossrh</serverId>
@@ -248,12 +264,34 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-enforcer-plugin</artifactId>
-                    <version>3.0.0-M2</version>
+                    <version>3.4.1</version>
                 </plugin>
             </plugins>
         </pluginManagement>
     </build>
     <profiles>
+        <profile>
+            <id>security</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.owasp</groupId>
+                        <artifactId>dependency-check-maven</artifactId>
+                        <version>8.1.2</version>
+                        <configuration>
+                            <skipSystemScope>true</skipSystemScope>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>check</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
         <profile>
             <id>release</id>
             <build>
@@ -286,6 +324,11 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>org.yaml</groupId>
+                <artifactId>snakeyaml</artifactId>
+                <version>${snakeyaml-version}</version>
+            </dependency>
+            <dependency>
                 <groupId>com.fasterxml.jackson.dataformat</groupId>
                 <artifactId>jackson-dataformat-yaml</artifactId>
                 <version>${jackson-version}</version>
@@ -298,7 +341,7 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>${jackson-version}</version>
+                <version>${jackson-databind-version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
@@ -331,7 +374,7 @@
             </dependency>
             <dependency>
                 <groupId>com.github.tomakehurst</groupId>
-                <artifactId>wiremock</artifactId>
+                <artifactId>wiremock-jre8</artifactId>
                 <version>${wiremock-version}</version>
                 <scope>test</scope>
             </dependency>
@@ -342,6 +385,8 @@
         <module>modules/swagger-parser-v3</module>
         <module>modules/swagger-parser-v2-converter</module>
         <module>modules/swagger-parser</module>
+        <module>modules/swagger-parser-cli</module>
+        <module>modules/swagger-parser-safe-url-resolver</module>
     </modules>
     <repositories>
         <repository>
@@ -366,20 +411,22 @@
         </repository>
     </repositories>
     <properties>
-        <swagger-parser-v2-version>1.0.57</swagger-parser-v2-version>
-        <commons-io-version>2.11.0</commons-io-version>
-        <slf4j-version>1.7.30</slf4j-version>
-        <swagger-core-version>2.1.13</swagger-core-version>
-        <swagger-core-v2-version>1.6.5</swagger-core-v2-version>
+        <maven.compiler.release>8</maven.compiler.release>
+        <snakeyaml-version>2.2</snakeyaml-version>
+        <swagger-parser-v2-version>1.0.68</swagger-parser-v2-version>
+        <commons-io-version>2.15.0</commons-io-version>
+        <slf4j-version>2.0.9</slf4j-version>
+        <swagger-core-version>2.2.19</swagger-core-version>
+        <swagger-core-v2-version>1.6.12</swagger-core-v2-version>
         <junit-version>4.13.2</junit-version>
-        <testng-version>6.14.2</testng-version>
-        <jmockit-version>1.35</jmockit-version>
-        <wiremock-version>2.15.0</wiremock-version>
-        <surefire-version>2.22.2</surefire-version>
-        <commons-lang-version>3.2.1</commons-lang-version>
-        <jackson-version>2.12.1</jackson-version>
+        <testng-version>7.8.0</testng-version>
+        <jmockit-version>1.49</jmockit-version>
+        <wiremock-version>2.35.1</wiremock-version>
+        <surefire-version>3.2.2</surefire-version>
+        <commons-lang-version>3.13.0</commons-lang-version>
+        <jackson-version>2.15.3</jackson-version>
+        <jackson-databind-version>2.15.3</jackson-databind-version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <sonatypeOssDistMgmtSnapshotsUrl>https://oss.sonatype.org/content/repositories/snapshots/</sonatypeOssDistMgmtSnapshotsUrl>
     </properties>
-
 </project>
